--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Conceptinero
-subtitle: SR&ED applications that hit the mark.
+subtitle: SR&ED applications that hit the mark
 ---
